Actualización a versión 2.0.2 con soporte para Java 21, mejoras en compatibilidad y ajustes en el código